--- a/localize_from_nearby_wifi.ipynb
+++ b/localize_from_nearby_wifi.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "if \"us.slite\" in os.listdir(\"data\"):\n",
+    "if \"us.sqlite\" in os.listdir(\"data\"):\n",
     "    print \"You appear to have the us.sqlite database in the correct location.\"\n",
     "else:\n",
     "    print \"\"\"You don't appear to have the us.sqlite database.  \n",
@@ -82,7 +82,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following will get get all nearby bssids and corresponding rssis.  Currently only apple airport is supported, although this should be straightforward to do with the linux 'iw' command."
+    "The following will get get all nearby bssids and corresponding rssis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On Mac OS:"
    ]
   },
   {
@@ -93,26 +100,71 @@
    },
    "outputs": [],
    "source": [
-    "def process_raw_lines_from_apple_airport(raw_lines, as_string):\n",
+    "def process_raw_lines_from_apple_airport(raw_lines):\n",
     "    items = list()\n",
     "    pat = r\"([a-z0-9]{2}:){5}[a-z0-9]{2} -[0-9]+\"\n",
     "    for line in raw_lines:\n",
     "        m = re.search(pat, line)\n",
     "        if m:\n",
     "            items.append(m.group(0).upper().replace(\":\", \"\"))\n",
-    "    if as_string:\n",
-    "        return \" \".join(items)\n",
-    "    else:\n",
-    "        return items\n",
+    "    return items\n",
     "\n",
-    "def get_bssids_and_rssis_via_apple_airport(as_string = True):\n",
+    "def get_bssids_and_rssis_via_apple_airport():\n",
     "    airport_command = \"/System/Library/PrivateFrameworks/Apple80211.framework/Versions/Current/Resources/airport -s\"\n",
     "    with os.popen(airport_command) as f:\n",
     "        raw_lines = f.readlines()\n",
-    "    result_string = process_raw_lines_from_apple_airport(raw_lines, as_string)\n",
-    "    return result_string\n",
+    "    results = process_raw_lines_from_apple_airport(raw_lines)\n",
+    "    return \" \".join(results)\n",
     "\n",
     "bssids_and_rssis = get_bssids_and_rssis_via_apple_airport()\n",
+    "\n",
+    "print bssids_and_rssis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On Linux:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "WIFI_INTERFACE_NAME = 'wlan0'\n",
+    "\n",
+    "def process_raw_lines_from_linux_iw(raw_lines):\n",
+    "    items = list()\n",
+    "    bss_pat = r\"([a-z0-9]{2}:){5}[a-z0-9]{2}\"\n",
+    "    rssi_pat = r\"signal: (-[0-9]+.[0-9]+) dBm\"\n",
+    "    \n",
+    "    start_indices = [i for i in range(len(raw_lines)) if re.search(bss_pat, raw_lines[i])]\n",
+    "    for i in range(len(start_indices)):\n",
+    "        start_index = start_indices[i]\n",
+    "        next_start_index = start_indices[i+1] if i+1 < len(start_indices) else len(raw_lines)\n",
+    "        bssid = re.search(bss_pat, raw_lines[start_index]).group(0).upper().replace(\":\", \"\")\n",
+    "        for j in range(start_index, next_start_index):\n",
+    "            m = re.search(rssi_pat, raw_lines[j])\n",
+    "            if m:\n",
+    "                rssi = m.group(1)\n",
+    "                break\n",
+    "        items.append(bssid + \" \" + rssi)\n",
+    "    return items\n",
+    "\n",
+    "\n",
+    "def get_bssids_and_rssis_via_linux_iw():\n",
+    "    iw_command = \"sudo iw \" + WIFI_INTERFACE_NAME + \" scan\"\n",
+    "    with os.popen(iw_command) as f:\n",
+    "        raw_lines = f.readlines()\n",
+    "    result_list = process_raw_lines_from_linux_iw(raw_lines)\n",
+    "    return \" \".join(result_list)\n",
+    "\n",
+    "bssids_and_rssis = get_bssids_and_rssis_via_linux_iw()\n",
     "\n",
     "print bssids_and_rssis"
    ]
