Added linux iw option to ipynb

--- a/localize_from_nearby_wifi.ipynb
+++ b/localize_from_nearby_wifi.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is meant as a guide to testing out wifi localization on the MAC addresses that are visible from your local wifi interface.\n",
+    "\n",
+    "You should start by cloning this repository, and running this notebook from inside the cloned directory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -173,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following command will run the localization program with the preceeding bssids/rssis and print the output.  If any of your local bssids were found in the database, your coordinate estimate will be printed at the bottom."
+    "The following command will run the localization program with the preceding bssids/rssis and print the output.  If any of your local bssids were found in the database, your coordinate estimate will be printed at the bottom."
    ]
   },
   {
