--- a/localize_from_nearby_wifi.ipynb
+++ b/localize_from_nearby_wifi.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,11 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You appear to have the us.sqlite database in the correct location.\n"
+     ]
+    }
+   ],
    "source": [
     "if \"us.sqlite\" in os.listdir(\"data\"):\n",
     "    print \"You appear to have the us.sqlite database in the correct location.\"\n",
@@ -54,11 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have sqlite3.\n"
+     ]
+    }
+   ],
    "source": [
     "if \"sqlite3\" in os.listdir(\"/usr/bin/\"):\n",
     "    print \"You have sqlite3.\"\n",
@@ -76,13 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "build_command = \"g++ localization_main.cc lib/estimation_functions.cc lib/query_functions.cc -o localization -std=c++11 -l sqlite3\"\n",
+    "build_command = \"g++ localization_main.cc lib/estimation_functions.cc lib/query_functions.cc lib/drop_old.cc -o localization -std=c++11 -l sqlite3\"\n",
     "with os.popen(build_command) as build_output:\n",
     "    print build_output.read()"
    ]
@@ -103,11 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4C3275C4C4CC -73 2C3033C23FBB -42 149182F78003 -80 B8C75D08C365 -79 3412980827F4 -73 A47AA41D18B0 -76 CE2E48F50FA9 -58 0690A90EAA61 -29 BC2E48F50FA9 -60 6455B18A34D0 -66 1C497B133AAB -44 EAFCAF9C9905 -82 E8FCAF9C9904 -83 2C3033CDF2D2 -51 CE2E48F50FAA -82 BC2E48F50FAA -82 0290A90EAA63 -48 000D67369A83 -77 000D67369A82 -77 000D67369A81 -77 CAFEC0DEF00D -32\n"
+     ]
+    }
+   ],
    "source": [
     "def process_raw_lines_from_apple_airport(raw_lines):\n",
     "    items = list()\n",
@@ -187,16 +219,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying database for the following BSSIDs:\n",
+      "BSSID 4C3275C4C4CC\n",
+      "RSSI -73\n",
+      "BSSID 2C3033C23FBB\n",
+      "RSSI -42\n",
+      "BSSID 149182F78003\n",
+      "RSSI -80\n",
+      "BSSID B8C75D08C365\n",
+      "RSSI -79\n",
+      "BSSID 3412980827F4\n",
+      "RSSI -73\n",
+      "BSSID A47AA41D18B0\n",
+      "RSSI -76\n",
+      "BSSID CE2E48F50FA9\n",
+      "RSSI -58\n",
+      "BSSID 0690A90EAA61\n",
+      "RSSI -29\n",
+      "BSSID BC2E48F50FA9\n",
+      "RSSI -60\n",
+      "BSSID 6455B18A34D0\n",
+      "RSSI -66\n",
+      "BSSID 1C497B133AAB\n",
+      "RSSI -44\n",
+      "BSSID EAFCAF9C9905\n",
+      "RSSI -82\n",
+      "BSSID E8FCAF9C9904\n",
+      "RSSI -83\n",
+      "BSSID 2C3033CDF2D2\n",
+      "RSSI -51\n",
+      "BSSID CE2E48F50FAA\n",
+      "RSSI -82\n",
+      "BSSID BC2E48F50FAA\n",
+      "RSSI -82\n",
+      "BSSID 0290A90EAA63\n",
+      "RSSI -48\n",
+      "BSSID 000D67369A83\n",
+      "RSSI -77\n",
+      "BSSID 000D67369A82\n",
+      "RSSI -77\n",
+      "BSSID 000D67369A81\n",
+      "RSSI -77\n",
+      "BSSID CAFEC0DEF00D\n",
+      "RSSI -32\n",
+      "\n",
+      "Found record: \n",
+      "_id = 295822003\n",
+      "bssid = CAFEC0DEF00D\n",
+      "manufactor = NULL\n",
+      "md5essid = NULL\n",
+      "latitude = 37.760849622041\n",
+      "longitude = -122.419518811837\n",
+      "source = openbmap\n",
+      "measurements = 98\n",
+      "last_updated = 2016-12-18\n",
+      "created_at = 2016-12-18\n",
+      "\n",
+      "Found record: \n",
+      "_id = 296505675\n",
+      "bssid = CAFEC0DEF00D\n",
+      "manufactor = NULL\n",
+      "md5essid = NULL\n",
+      "latitude = 37.760582671538\n",
+      "longitude = -122.419172378462\n",
+      "source = openbmap\n",
+      "measurements = 26\n",
+      "last_updated = 2017-01-22\n",
+      "created_at = 2017-01-22\n",
+      "\n",
+      "Found record: \n",
+      "_id = 303018528\n",
+      "bssid = CAFEC0DEF00D\n",
+      "manufactor = NULL\n",
+      "md5essid = NULL\n",
+      "latitude = 37.814191852903\n",
+      "longitude = -122.264648626452\n",
+      "source = openbmap\n",
+      "measurements = 62\n",
+      "last_updated = 2017-11-04\n",
+      "created_at = 2017-11-04\n",
+      "\n",
+      "Considering bssid CAFEC0DEF00D\n",
+      "Date_t is: 1482048000\n",
+      "Date_t 140732679272296 is < date_t 1482048000\n",
+      "Considering bssid CAFEC0DEF00D\n",
+      "Date_t is: 1485072000\n",
+      "Date_t 1482048000 is < date_t 1485072000\n",
+      "Considering bssid CAFEC0DEF00D\n",
+      "Date_t is: 1509782400\n",
+      "Date_t 1485072000 is < date_t 1509782400\n",
+      "Found the following matching records (taking latest for each BSSID):\n",
+      "bssid: CAFEC0DEF00D\n",
+      "last_updated: 2017-11-04\n",
+      "latitude: 37.8142\n",
+      "longitude: -122.265\n",
+      "\n",
+      "Coordinate estimate: \n",
+      "Latitude = 37.814192\n",
+      "Longitude = -122.264649\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "localize_command = \"./localization \" + bssids_and_rssis\n",
     "with os.popen(localize_command) as g:\n",
     "    print g.read()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
